# BMDL-Importer

./: BMDL-Importer_2.8.py  Megamouth.gmdl  README.md  __init__.py  blender_manifest.toml  bmdl-incomplete.py  bmdl.py  bmdlImporter_new.py  bmdl_core.py  bmdl_schema.py  citadel_factoryarm_01.bmdl  citadel_factoryarm_02.bmdl  citadel_factoryarm_03.bmdl  citadel_factorybeam.bmdl  citadel_factorycylinder.bmdl  citadel_factorydigger_01.bmdl  citadel_factoryhydraulics.bmdl  citadel_factoryinner_01.bmdl  citadel_factoryinner_02.bmdl  citadel_factorylight.bmdl  citadel_terrain_d_pvp.bmdl  creature-dwg.bmdl  creatureeditor_el_anime_arm.bmdl  creatureeditor_el_diasb.bmdl  creatureeditor_el_terrain.bmdl  creatureeditor_spacewhite_dias.bmdl  cryos_acunit_large.bmdl  cryos_terrain_start.bmdl  fmt_astc_astc.py  fmt_dawngate_bmdl.py  fmt_etc_pkm.py  fmt_goldeneye_n64.py  fmt_ue4.py  front_end_helixwall.bmdl.txt  inc_atarijaguar.py  inc_imgtools.py  inc_noesis.py  inc_romcom.py  io_anim.py  io_armature.py  (+7 more)
docs/: BMDL_ANIMATION.md  BMDL_FORMAT.md  BMDL_MATERIALS.md
pluginsource/: _my_apologies_and_x64_support.txt  bayonetta.txt  pluginshare.h  pluginsupport.cpp
pluginsource/ff9psx_img_mdl/: ff9psx_img_mdl.sln
pluginsource/metroidprime_pak/: metroidprime_pak.sln
pluginsource/pcximage/: pcximage.sln
pluginsource/quakemd2/: quakemd2.sln
pluginsource/ssthehades_gmi/: ssthehades_gmi.sln
pluginsource/unrealengine2_psk_psa/: unrealengine2_psk_psa.sln
res/: logo.afdesign
sporemodder/: __init__.py  bmdl_importer.py
tools/: validate_bmdl.py
(+34 files in other folders)
